[package]
name = "contender-new-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-node-bindings = "1.0.25"
contender_core = { git = "https://github.com/flashbots/contender", rev = "05fc7665555f8f5becbb4980a4db378de9c5aad5" }
contender_report = { git = "https://github.com/flashbots/contender", rev = "05fc7665555f8f5becbb4980a4db378de9c5aad5" }
contender_testfile = { git = "https://github.com/flashbots/contender", rev = "05fc7665555f8f5becbb4980a4db378de9c5aad5" }
contender_engine_provider = { git = "https://github.com/flashbots/contender", rev = "05fc7665555f8f5becbb4980a4db378de9c5aad5" }
contender_sqlite = { git = "https://github.com/flashbots/contender", rev = "05fc7665555f8f5becbb4980a4db378de9c5aad5" }
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
