[package]
name = "contender-new-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
contender_core = { git = "https://github.com/flashbots/contender", version = "0.4.3" }
contender_report = { git = "https://github.com/flashbots/contender", version = "0.4.3" }
contender_testfile = { git = "https://github.com/flashbots/contender", version = "0.4.3" }
contender_sqlite = { git = "https://github.com/flashbots/contender", version = "0.4.3" }
# contender_core = { path = "../../contender/crates/core" }
# contender_report = { path = "../../contender/crates/report" }
# contender_testfile = { path = "../../contender/crates/testfile" }
# contender_sqlite = { path = "../../contender/crates/sqlite_db" }
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
